# GCR-Heliosheath-Modulation

./: CITATION.cff  Makefile.am  README.md  configure.ac  configure.sh
common/: physics.hh  workload_manager.hh
results/: README.md
runs/: Makefile.am  compile_code.sh  compute_kappa_common.cc  compute_kappa_common.hh  compute_kappa_parallel.cc  compute_kappa_parallel.hh  compute_kappa_parallel_QLT.cc  compute_kappa_parallel_QLT.hh  compute_kappa_parallel_SOQLT.cc  compute_kappa_parallel_SOQLT.hh  compute_kappa_perpendicular.cc  compute_kappa_perpendicular.hh  compute_kappa_perpendicular_UNLT.cc  compute_kappa_perpendicular_UNLT.hh  convert_flux_to_rate_ions.py  electrons_main_compute_kappa_QLT.cc  electrons_main_compute_kappa_SOQLT.cc  electrons_main_compute_kappa_UNLT.cc  electrons_main_integrate_HS_modulation_spectra_along_path.cc  electrons_main_plot_diffusion.cc  electrons_main_process_HS_modulation_spectrum.cc  electrons_main_sim_HS_modulation_parker.cc  helium_main_compute_kappa_QLT.cc  helium_main_compute_kappa_SOQLT.cc  helium_main_compute_kappa_UNLT.cc  helium_main_integrate_HS_modulation_spectra_along_path.cc  helium_main_plot_diffusion.cc  helium_main_process_HS_modulation_spectrum.cc  helium_main_sim_HS_modulation_parker.cc  hydrogen_main_compute_kappa_QLT.cc  hydrogen_main_compute_kappa_SOQLT.cc  hydrogen_main_compute_kappa_UNLT.cc  hydrogen_main_integrate_HS_modulation_spectra_along_path.cc  hydrogen_main_plot_diffusion.cc  hydrogen_main_process_HS_modulation_spectrum.cc  hydrogen_main_process_HS_modulation_time.cc  hydrogen_main_sim_HS_modulation_parker.cc  main_compute_kappa_QLT.cc  main_compute_kappa_SOQLT.cc  main_compute_kappa_UNLT.cc  (+28 more)
runs/params/: params_e_3.txt  params_e_full.txt
src/: background_base.cc  background_base.hh  background_cylindrical_obstacle.hh  background_dipole.hh  background_magnetized_cylinder.hh  background_magnetized_sphere.hh  background_smooth_shock.hh  background_solarwind.cc  background_solarwind.hh  background_solarwind_termshock.cc  background_solarwind_termshock.hh  background_spherical_obstacle.hh  diffusion_other.cc  diffusion_other.hh  simulation.cc  trajectory_base.hh  trajectory_parker.cc  trajectory_parker.hh
